# CSCE240

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  Doxyfile  README.md  cpp.hint  vcpkg.json
include/assignment2/: program2functions.h
include/assignment3/: word_search_functions.h
include/assignment4/: weight.h  weightrange.h
include/assignment5/: SongRecording.h  StreamingTrack.h
include/assignment6/: multiplechoicequestion.h  question.h  shortanswerquestion.h  truefalsequestion.h
include/csce240/assignment2/: program2functions.h
src/: CMakeLists.txt
src/assignment1/: CMakeLists.txt  program1.cc
src/assignment2/: CMakeLists.txt  program2functions.cc  program2functions.h
src/assignment3/: CMakeLists.txt  word_search_functions.cc
src/assignment4/: CMakeLists.txt  weight.cc  weightrange.cc
src/assignment5/: CMakeLists.txt  SongRecording.cc  StreamingTrack.cc
src/assignment6/: CMakeLists.txt  multiplechoicequestion.cc  shortanswerquestion.cc  truefalsequestion.cc
test/: CMakeLists.txt  assignment2_test.cc  assignment3_tests.cc
tests/: CMakeLists.txt  assignment2_test.cc  assignment4_test.cc  example_wordsearch.txt  malformed_wordsearch.txt  test_assignment2.cc  test_assignment3.cc  test_assignment4.cc
